--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-image: url("https://4.bp.blogspot.com/-_h_RAtEEiqk/WYlgeZogdCI/AAAAAAAAAGM/_duUn4ftsbglyLq7qNmvCozsj3vWoajrgCLcBGAs/s1600/0DNer7E.jpg");
   min-height: 100vh;
   display: flex;
   flex-direction: column;
